--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,15 @@
     display: flex;
     gap: 10px;
  }
+ 
  nav .link:hover{
-   color: #17a73d;
+   color: #824fc0;
  }
  nav .link, .sub-link .link  {
-    color: #000000;
+    color: #28262b;
     text-decoration: none;
     font-weight: 600;
-    font-size: 17px;
+    font-size: 19px;
  }
  .sub-link{
    width: auto;
@@ -75,7 +76,7 @@
    #2ead58
  */
  .sub-link .link {
-   color: #181717;
+   color: #222222;
    background: transparent;
    border-radius: 50px;
    padding: 5px 20px;
@@ -193,7 +194,7 @@
     background: #fff;
  } */
  .swiper-inner {
-    background: #eee;
+    background: #fff;
     position: relative;
     padding-top: 50px;
  }
@@ -202,9 +203,9 @@
    top: 0;
    left: 0;
    justify-content: space-between;
-   width: 95%;
+   width: 100%;
    padding: 10px 15px;
-   border-radius: 20px;
+   border-bottom: 2px solid #eee;
    /* background: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.096); */
  }
@@ -216,8 +217,10 @@
    display: flex;
    align-items: center;
    justify-content: center;
-   z-index: 800;
-   backdrop-filter: blur(1px);
+   z-index: 1200;
+   /* backdrop-filter: blur(1px); */
+   background: rgba(0, 0, 0, 0.32);
+   padding: 10px;
  }
  .modal-contnr .modal-box {
    width: 100%;
@@ -254,9 +257,10 @@
  }
 
  .modal-box .modal-btns-box .modal-btn {
-   width: 120px;
+   width: 170px;
+   height: 50px;
    border: none;
-   border-radius: 5px;
+   border-radius: 10px;
    font-size: 17px;
    cursor: pointer;
  }
@@ -272,12 +276,17 @@
    width: 100%;
    height: 100%;
    padding: 5px;
+   font-size: 20px;
    display: block;
+   display: flex;
+   align-items: center;
+   justify-content: center;
  }
  .modal-btns-box .modal-btn:nth-child(2) {
    background: transparent;
    color: #000;
    padding: 5px;
+   border: 2px solid #824fc0;
  }
  .modal-btns-box .modal-btn:nth-child(2):hover{
    color: #824fc0;
@@ -302,16 +311,26 @@
    gap: 10px;
    justify-content: center;
  }
+ .menu .p-cont{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background: #e7d3ff;
+   border-radius: 50%;
+   cursor: pointer;
+   width: 40px;
+   height: 40px;
+ }
  .menu .profile-link{
    text-decoration: none;
    color: #201f1f;
    font-weight: bold;
-   font-size: 17px;
+   font-size: 19px;
    padding: 5px 10px;
-   border-radius: 10px;
-   background: #e7d3ff;
    color: #8f6cb9;
-   /* border: 2px solid #c9a9ef; */
+   display: flex;
+   justify-content: center;
+   align-items: center;
    cursor: pointer;
  }
   .menu .profile-link:hover {
@@ -510,7 +529,7 @@
    gap: 20px;
    padding-top: 50px;
    flex-direction: column;
-   background: #eee;
+   background: #fff;
 }
 
 .generator-cont {
@@ -526,7 +545,7 @@
    /* box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2); */
 }
 .generator-cont .row1 {
-   width: 95%;
+   width: 100%;
    border-radius: 25px;
    /* background: #fff; */
    position: relative;
@@ -548,7 +567,7 @@
    background: #fff;
    padding: 10px;
    border-radius: 20px;
-   box-shadow: 0 0 10px rgba(0, 0, 0, 0.096);
+   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.096); */
    /* border-left: 2px solid #bcbcbc; */
    /* padding-top: 50px; */
 }
@@ -567,7 +586,7 @@
    gap: 10px;
    flex-wrap: wrap;
    padding: 10px;
-   background: #eee;
+   background: #f2f2f2;
    border-radius: 20px;
 } 
  .Generator .form {
@@ -580,7 +599,7 @@
    flex-direction: column;
    padding: 10px;
    background: #fff;
-   box-shadow: 0 0 10px rgba(0, 0, 0, 0.096);
+   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.096); */
    border-radius: 20px;
  }
  
@@ -607,7 +626,8 @@
    max-width: 400px;
  }
   .input-bx label {
-   color: #726c6c;
+   color: #242323;
+   font-size: 18px;
  }
 
   input {
@@ -616,7 +636,9 @@
    border-radius: 10px;
    border: none;
    padding: 10px;
-   background: #eee;
+   background: #f2f2f2;
+   outline: 2px solid #eee;
+   font-size: 15px;
  }
  input:focus,  textarea:focus{
    outline: 2px solid #d7b6ff;
@@ -632,6 +654,9 @@
    border: none;
    padding: 10px;
    resize: none;
+   font-size: 15px;
+   background: #f2f2f2;
+   outline: 2px solid #eee;
 }
  #generate-btn {
    width: 300px;
@@ -753,6 +778,9 @@
 .social-media-links h1{
    font-size: 20px;
    color: #414141;
+   position: absolute;
+   top: 5px;
+   left: 10px;
 }
 .social-media-links .row2 {
    width: 100%;
@@ -761,14 +789,32 @@
    justify-content: center;
    flex-wrap: wrap;
    gap: 10px;
-   padding: 10px;
+   padding: 50px 10px 10px 10px;
+   position: relative;
 }
+
+/* .img-upload input{
+   height: 200px;
+   display: none;
+}
+.img-upload .upload img{
+   width: 300px;
+} */
+
 @media screen and (max-width: 650px) {
     .form .inner {
       grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
    }
 }
 @media screen and (max-width: 820px) {
+   .social-media-links{
+      align-items: center;
+   }
+   .social-media-links .row2{
+      max-width: 400px;
+   }
+}
+@media screen and (max-width: 860px) {
    .hero h1 {
       font-size: 45px;
       text-transform: capitalize;
@@ -808,12 +854,12 @@
 
      .menu .menu-link{
       position: fixed;
-      top: 40px;
+      top: 0;
       right: 0;
       height: 0;
       flex-flow: column;
       padding: 10px;
-      gap: 30px;
+      gap: 0px;
       z-index: 100;
       background: #fff;
       width: 100%;
@@ -821,13 +867,14 @@
       border-radius: 0 0 20px 20px;
       transition: .2s;
       overflow: hidden;
+      justify-content: flex-end;
      }
      .menu .menu-link.active {
-      height: 200px;
+      height: 150px;
      }
      .menu-link .fa-times {
       position: absolute;
-      top: 20px;
+      top: 50px;
       right: 30px;
       font-size: 20px;
       cursor: pointer;
