--- a/src/css/profilecard.css
+++ b/src/css/profilecard.css
@@ -12,7 +12,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 700px;
+    height: auto;
+    margin-top: 50px;
     padding: 70px 10px 10px 10px;
   }
   .profile {
